Little Fix for Word-Wrap of No-Data-Text

--- a/webapp/style/style.css
+++ b/webapp/style/style.css
@@ -15,11 +15,11 @@ html{
 }
 .sapUiLocalBusyIndicatorAnimation:before{
 	content: "Keine Daten vorhanden. Bitte Einstellungen anpassen!";
-    width: 500px;
+    width: 600px;
     text-align: center;
     position: absolute;
-    left: -250px;
-    top: -10px;
+    left: -300px;
+    top: -0.65rem;
     z-index: 100;
     font-size: 1.3rem;
     color: #FAFAFA;
